--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Cantidad de items en el carrito -->
     <div id="carrito-icono" style="position: fixed; top: 20px; right: 20px; cursor: pointer;">
-      <img src="static/imagenes/canasto.png">
+      <img src="static/imagenes/Canasto.png">
       <i class="fas fa-shopping-cart" style="font-size: 30px;"></i>
       <span id="carrito-cantidad" style="position: absolute; top: -10px; right: -10px; background-color: red; color: white; border-radius: 50%; padding: 5px 10px;">0</span>
     </div>
