--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="#contacto">Contacto</a></li>
       </ul>
       <div class="logo">
-        <img src="static/imagenes/logoTat.jpg" alt="TalentoTech">
+        <img src="static/imagenes/LogoTat.jpg" alt="TalentoTech">
       </div><div>
     </nav>
 
